manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: poltweetex
  name: backend-api-service
  labels:
    app: backend
spec:
  type: LoadBalancer
  ports:
  - name: backend-api
    protocol: TCP
    port: 80
  selector:
    app: backend
